log
Sun, May 18, 2025  4:46:14 PM: 
 sudoku.c | 26 +++++++++++++++++++++++---
 1 file changed, 23 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
3f0e54c
Sun, May 18, 2025  4:49:11 PM: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
1f3b0b0
Sun, May 18, 2025  4:53:34 PM: 
 sudoku.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
2477810
Sun, May 18, 2025  4:54:30 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|3
total_score: 30/70
57ab022
Sun, May 18, 2025  5:01:26 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|3
total_score: 30/70
7773968
Sun, May 18, 2025  5:02:10 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|3
total_score: 30/70
2d5956b
Sun, May 18, 2025  5:07:46 PM: 
 sudoku.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  7|2
total_score: 50/70
2fe2845
Sun, May 18, 2025  5:18:01 PM: 
 sudoku.c | 32 ++++++++++++++++++++++++++++++--
 1 file changed, 30 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:103:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
a6fcbcc
Sun, May 18, 2025  5:18:27 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|0
total_score: 70/70
6e65861
